# apexlinks

./: README.md  ask  package-lock.json  package.json  start-dev.sh
144/: .gitignore  Cargo.toml  README-APEXLINKS.md  README.md  bible_embedding_state.json  context.md  run.sh
144/google_auth_test/: Cargo.toml
144/qdrant_storage/: raft_state.json
144/qdrant_storage/collections/i/0/: replica_state.json
144/src/: constants.rs  gemini_embed.rs  lib.rs  main.rs
144/src/routes/: arbitrage.rs  mod.rs  setup.rs
144/src/routes/a/: add.rs  i.rs  mod.rs  search.rs
144/src/routes/auth/: google.rs  login.rs  mod.rs
144/src/routes/bible/: embed.rs  mod.rs
144/src/routes/chat/: matching.rs  mod.rs  storage.rs  types.rs  websocket.rs
144/src/routes/chatgroup/: add.rs  delete.rs  edit.rs  search.rs
144/src/routes/item/: add.rs  delete.rs  edit.rs  get.rs  mod.rs  search.rs
144/src/routes/mrnowman/: add.rs  chat.rs  mod.rs
144/src/routes/product/: add.rs  delete.rs  edit.rs  mod.rs  search.rs
144/src/routes/real/: add.rs
144/src/routes/service/: add.rs  delete.rs  edit.rs  search.rs
144/src/routes/user/: get.rs  join_zone.rs  leave_zone.rs  mod.rs  search.rs  similarity.rs
144/src/routes/verses/: mod.rs  search.rs
144/src/routes/voicechat/: matching.rs  mod.rs  signaling.rs  user_tags.rs
144/src/routes/zone/: add.rs  delete.rs  edit.rs  mod.rs  search.rs  types.rs
144/src/util/: embed.rs  groq.rs  mod.rs  password.rs  qdrant.rs  setup.rs
144/tests/: auth_tests.rs  integration_tests.rs
aw/: README.md  notes.md  package-lock.json  package.json  (+5 more)
(+165 files in other folders)
