[package]
name = "i144"
version = "0.1.0"
edition = "2021"

[dependencies]
ccxt = { git = "https://github.com/kizzx2/ccxt-rs-lib" }
anyhow = { version = "1.0.93", features = ["backtrace"] }
argon2 = "0.5.3"
base64 = "0.22.1"
bytes = "1.9.0"
chrono = "0.4.38"
env_logger = "0.11.3"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
oauth2 = "4.4.2"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = ["json", "multipart"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
serde = "1.0.215"
serde_json = "1.0.133"
shuttle-runtime = "0.55.0"
shuttle-warp = "0.55.0"
thiserror = "2.0.3"
tokio = { version = "1.26.0", features = ["full", "test-util"] }
url = "2.5.0"
uuid = { version = "1.11.0", features = ["v7"] }
warp = "0.3.3"
fastembed = "4.4.0"
toml = "0.7.6"
qdrant-client = "1.14.0"
tokio-tungstenite = "0.26.2"
lazy_static = "1.5.0"

[patch.crates-io]
onig_sys = { git = "https://github.com/rust-onig/rust-onig", package = "onig_sys" }

[dev-dependencies]
mockall = "0.12.1"
pretty_assertions = "1.4.0"
test-log = "0.2.15"

[lib]
name = "i144"
path = "src/lib.rs"
